# textalignsynth

./: .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  pyproject.toml
data/BeethovenPianoSonatas/2_Annotations/ann_audio_chord/: Beethoven_Op002No1-01_FG58.csv
data/BeethovenPianoSonatas/2_Annotations/ann_audio_measure/: Beethoven_Op002No1-01_FG58.csv
data/BeethovenPianoSonatas/2_Annotations/ann_audio_structureFine/: Beethoven_Op002No1-01_FG58.csv
data/WagnerRingShortened/02_Annotations/ann_audio_leitmotifs/: Wagner_WWV086D-1_Krauss1953.csv
textalignsynth/: __init__.py  comment_generation.py  loudness.py  pipeline.py  synthesis.py
thirdPartyLegalNotices/: attributions.txt
